# tiko

./: .env.dev  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
events/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_event_created_at.py  0003_event_event_start_t_849dac_idx_and_more.py
profiles/: serializers.py  urls.py  views.py
tests/: conftest.py  const.py  factories.py  utils.py
tests/events/: test_events.py
tests/profiles/: test_authentication.py  test_signup.py
tiko/: asgi.py  settings.py  urls.py  wsgi.py
